# attendance-tool

./: .gitignore  =3.0.0  =8.0.0  CHANGELOG.md  LICENSE  Makefile  README.md  cli_main.py  gui_main.py  make.bat  make.cmd  make.ps1  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: code-quality.yml  e2e-tests.yml
assets/: README.md
build_scripts/: build.bat  build_exe.py  create_installer.nsi  create_installer.py  test_build.py
config/: csv_format.yaml  error_handling.yaml  logging.yaml  template_config.yaml  validation_rules.yaml  work_rules.yaml
docs/: ONBOARDING.md  PROJECT_OVERVIEW.md  gui_usage.md  requirements.md
docs/design/attendance-tool/: api-endpoints.md  architecture.md  database-schema.sql  dataflow.md  interfaces.ts
docs/release/: DISTRIBUTION_GUIDE.md  RELEASE_NOTES_v0.1.0.md
docs/spec/: attendance-tool-requirements.md
docs/tasks/: attendance-tool-tasks.md
docs/tdd/TASK-003/: tdd-green.md  tdd-red.md  tdd-refactor.md  tdd-requirements.md  tdd-testcases.md  tdd-verify-complete.md
docs/tdd/TASK-101/: tdd-green.md  tdd-red.md  tdd-refactor.md  tdd-requirements.md  tdd-testcases.md  tdd-verify-complete.md
docs/tdd/TASK-102/: tdd-green.md  tdd-red.md  tdd-refactor.md  tdd-requirements.md  tdd-testcases.md  tdd-verify-complete.md
docs/tdd/TASK-103/: tdd-green.md  tdd-red.md  tdd-refactor.md  tdd-requirements.md  tdd-testcases.md  tdd-verify-complete.md
docs/tdd/TASK-201/: tdd-green.md  tdd-red.md  tdd-refactor.md  tdd-requirements.md  tdd-testcases.md  tdd-verify-complete.md
docs/tdd/TASK-202/: tdd-green.md  tdd-red.md  tdd-refactor.md  tdd-requirements.md  tdd-testcases.md  tdd-verify-complete.md
docs/tdd/TASK-203/: tdd-green.md  tdd-red.md  tdd-refactor.md  tdd-requirements.md  tdd-testcases.md  tdd-verify-complete.md
docs/tdd/TASK-301/: tdd-green.md  tdd-red.md  tdd-refactor.md  (+3 more)
docs/testing/: COVERAGE_REPORT.md  README.md  TEST_EXECUTION_GUIDE.md  TEST_MAPPING.md  TEST_STRATEGY.md  UNIT_TEST_GUIDELINES.md
scripts/: complexity_check.py
src/attendance_tool/: __init__.py  models.py
templates/csv/: default_template.csv
templates/excel/: corporate_template.xlsx  default_template.xlsx  simple_template.xlsx
tests/e2e/: README.md  __init__.py  conftest.py  test_end_to_end.py
tests/integration/: test_cli_integration.py  test_config_integration.py  test_validation_integration.py
tests/unit/: test_attendance_record.py  test_cli.py  test_config.py  test_csv_reader.py  test_data_cleaner.py  test_data_validator.py
(+128 files in other folders)
