[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-tool"
version = "0.1.0"
description = "勤怠データのCSV自動集計・レポート生成ツール"
readme = "README.md"
authors = [
    {name = "Attendance Tool Development Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Utilities",
]
keywords = ["attendance", "csv", "excel", "report", "automation"]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.9",
    "click>=8.0.0",
    "pydantic>=1.8.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "pre-commit>=2.15.0",
]
gui = [
    "tkinter",
    "pillow>=8.0.0",
]

[project.scripts]
attendance-tool = "attendance_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
attendance_tool = ["config/*.yaml", "templates/*.xlsx"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=attendance_tool --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["attendance_tool"]
known_third_party = ["pandas", "openpyxl", "click", "pydantic"]